--- a/elastic-net-illustration-binary.Rmd
+++ b/elastic-net-illustration-binary.Rmd
@@ -183,8 +183,8 @@ for(rho in c(0.85,0.9,0.95,0.99))
         (coef(glmnetObj,
         s= cv.glmnetObj$lambda.1se)[2:(dataDimension + 1)] != 0)
     misclassificationMatrix_10[counter, its]   <-  sum((
-        predict(glmnetObj, s= cv.glmnetObj$lambda.1se, 
-        newx = X[101:nrow(X),]) != y[101:nrow(X)]))/100
+        as.numeric(predict(glmnetObj, s= cv.glmnetObj$lambda.1se, 
+        newx = X[101:nrow(X),])>0.5) != y[101:nrow(X)]))/100
     
     TPmatrix_10[counter, its] <- sum((coef(glmnetObj,
                                            s= cv.glmnetObj$lambda.1se)
@@ -241,8 +241,8 @@ for(rho in c(0.85,0.9,0.95,0.99))
         (coef(glmnetObj,
         s= cv.glmnetObj$lambda.1se)[2:(dataDimension + 1)] != 0)
     misclassificationMatrix_01[counter, its]   <-  sum((
-        predict(glmnetObj, s= cv.glmnetObj$lambda.1se, 
-        newx = X[101:nrow(X),]) != y[101:nrow(X)]))/100
+        as.numeric(predict(glmnetObj, s= cv.glmnetObj$lambda.1se, 
+        newx = X[101:nrow(X),])>0.5) != y[101:nrow(X)]))/100
         
     TPmatrix_01[counter, its] <- sum((coef(glmnetObj,
                                            s= cv.glmnetObj$lambda.1se)
@@ -301,8 +301,8 @@ for(rho in c(0.85,0.9,0.95,0.99))
         (coef(glmnetObj,
         s= cv.glmnetObj$lambda.1se)[2:(dataDimension + 1)] != 0)
     misclassificationMatrix_05[counter, its]   <-  sum((
-        predict(glmnetObj, s= cv.glmnetObj$lambda.1se, 
-        newx = X[101:nrow(X),]) != y[101:nrow(X)]))/100
+        as.numeric(predict(glmnetObj, s= cv.glmnetObj$lambda.1se, 
+        newx = X[101:nrow(X),])>0.5) != y[101:nrow(X)]))/100
     
     TPmatrix_05[counter, its] <- sum((coef(glmnetObj,
                                            s= cv.glmnetObj$lambda.1se)
@@ -528,8 +528,8 @@ for(rho in c(0.85,0.9,0.95,0.99))
         (coef(glmnetObj,
         s= cv.glmnetObj$lambda.1se)[2:(dataDimension + 1)] != 0)
     misclassificationMatrix_10[counter, its]   <-  sum((
-        predict(glmnetObj, s= cv.glmnetObj$lambda.1se, 
-        newx = X[101:nrow(X),]) != y[101:nrow(X)]))/100
+        as.numeric(predict(glmnetObj, s= cv.glmnetObj$lambda.1se, 
+        newx = X[101:nrow(X),])>0.5) != y[101:nrow(X)]))/100
     
     TPmatrix_10[counter, its] <- sum((coef(glmnetObj,
                                            s= cv.glmnetObj$lambda.1se)
@@ -584,8 +584,8 @@ for(rho in c(0.85,0.9,0.95,0.99))
         (coef(glmnetObj,
         s= cv.glmnetObj$lambda.1se)[2:(dataDimension + 1)] != 0)
     misclassificationMatrix_01[counter, its]   <-  sum((
-        predict(glmnetObj, s= cv.glmnetObj$lambda.1se, 
-        newx = X[101:nrow(X),]) != y[101:nrow(X)]))/100
+        as.numeric(predict(glmnetObj, s= cv.glmnetObj$lambda.1se, 
+        newx = X[101:nrow(X),])>0.5) != y[101:nrow(X)]))/100
         
     TPmatrix_01[counter, its] <- sum((coef(glmnetObj,
                                            s= cv.glmnetObj$lambda.1se)
@@ -641,8 +641,8 @@ for(rho in c(0.85,0.9,0.95,0.99))
         (coef(glmnetObj,
         s= cv.glmnetObj$lambda.1se)[2:(dataDimension + 1)] != 0)
     misclassificationMatrix_05[counter, its]   <-  sum((
-        predict(glmnetObj, s= cv.glmnetObj$lambda.1se, 
-        newx = X[101:nrow(X),]) != y[101:nrow(X)]))/100
+        as.numeric(predict(glmnetObj, s= cv.glmnetObj$lambda.1se, 
+        newx = X[101:nrow(X),])>0.5) != y[101:nrow(X)]))/100
     
     TPmatrix_05[counter, its] <- sum((coef(glmnetObj,
                                            s= cv.glmnetObj$lambda.1se)
